# dijiang

./: .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  pyproject.toml  setup.cfg
src/dijiang/: __init__.py
src/notebooks/: main.ipynb
src/tests/: electron_test.py
